<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">uNote</string>
    <string name="title_note_detail">Note Detail</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="no_notes">No notes yet</string>
    <string name="title_activity_view_note">ViewNoteActivity</string>
    <string name="big_text">In this example we also have a private static class called ViewHolder.

        Making calls to findViewById() is really slow in practice, and if your adapter has to call it for each View in your row for every single row then you will quickly run into performance issues. What the ViewHolder class does is cache the call to findViewById().
        Once your ListView has reached the max amount of rows it can display on a screen, Android is smart enough to begin recycling those row Views. We check if a View is recycled with if (convertView == null). If it is not null then we have a recycled View and can just change its values, otherwise we need to create a new row View.
        The magic behind this is the setTag() method which lets us attach an arbitrary object onto a View object, which is how we save the already inflated View for future reuse.</string>
    <string name="edit_note">Edit Note</string>
    <string name="share_note">Share Note</string>
    <string name="delete_note">Delete Note</string>
    <string name="title_activity_edit_note">EditNoteActivity</string>
    <string name="save_note">Save Note</string>
    <string name="title_required">The note must have a title</string>
    <string name="add_note">Add Note</string>
    <string name="search_note">Search Note</string>
    <string name="sort_note">Sort Note</string>
    <string name="help">Help</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="newest_first">Sort by Updated (newest first)</string>
    <string name="oldest_first">Sort by Updated (oldest first)</string>
    <string name="drawer_open">Menu opened</string>
    <string name="drawer_close">Menu closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_item_detail">ItemDetailActivity</string>
    <string name="color_picker_default_title">Select a Color</string>
    <!-- Content description for a color square. -->
    <string name="color_swatch_description">Color </string>
    <!-- Content description for a selected color square. -->
    <string name="color_swatch_description_selected">Color selected</string>
    <string name="color_note">Color Note</string>
    <string name="sync">Sync with Drive</string>
    <string name="title_activity_backup_restore">Backup/Restore</string>
    <string name="backup_text">Backup will export all of your Notes into Google Drive.\nOlder Backups will be replaced by newer ones.</string>
    <string name="create_backup">Create Backup</string>
    <string name="restore_backup">Restore Backup</string>
    <string name="restore_text">Restore your all notes from a previously crated backup.</string>
    <string name="restore_checkbox_text">All Current Notes will be lost and replaced by backed up Notes.</string>
    <string name="dialog_save_text">Do you want to save the note?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="note_saved">The note has been saved.</string>

</resources>
