<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yurkiv.materialnotes.activity.MainActivity">

    <item android:id="@+id/add_note"
        android:icon="@drawable/ic_add"
        android:title="@string/add_note"
        app:showAsAction="always" />

    <item android:id="@+id/search_note"
        android:icon="@drawable/ic_search"
        android:title="@string/search_note"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/sort_note"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_note"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />

    <item android:id="@+id/help"
        android:title="@string/help"
        android:orderInCategory="100"
        app:showAsAction="never" />
</menu>
