<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yurkiv.materialnotes.activity.NoteListActivity">

    <item android:id="@+id/search_note"
        android:icon="@drawable/ic_search"
        android:title="@string/search_note"
        app:showAsAction="always"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/sort_note"
        android:icon="@drawable/ic_sort"
        android:title="@string/sort_note"
        app:showAsAction="always" >
        <!-- "sort" submenu -->
        <menu>
            <group android:checkableBehavior="single">
            <item android:id="@+id/sort_by_title"
                android:title="@string/sort_by_title" />
            <item android:id="@+id/newest_first"
                android:title="@string/newest_first" />
            <item android:id="@+id/oldest_first"
                android:title="@string/oldest_first" />
            </group>
        </menu>
    </item>
    <!--<item android:id="@+id/settings"-->
        <!--android:title="@string/action_settings"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->

    <!--<item android:id="@+id/help"-->
        <!--android:title="@string/help"-->
        <!--android:orderInCategory="100"-->
        <!--app:showAsAction="never" />-->
</menu>
