<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.yurkiv.unote.activity.BackupRestoreActivity">

    <include layout="@layout/toolbar_default"
        android:id="@+id/toolbar_restore" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_restore"
        android:layout_margin="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_backup"
            android:id="@+id/textView2"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/backup_text"
            android:id="@+id/textView3"
            android:layout_marginTop="8dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Backup"
            android:id="@+id/btnBackup"
            android:layout_marginTop="8dp"
            android:enabled="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_backup"
            android:id="@+id/textView4"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_text"
            android:id="@+id/textView5"
            android:layout_marginBottom="8dp" />

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/restore_checkbox_text"
            android:id="@+id/chbAllow"
            android:checked="false"
            android:enabled="false" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Restore"
            android:id="@+id/btnRestore"
            android:layout_marginTop="8dp"
            android:enabled="false" />
    </LinearLayout>

</RelativeLayout>
